--- a/public/register.html
+++ b/public/register.html
@@ -36,6 +36,6 @@
     <p id="msg" class="error"></p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="\script.js"></script>
 </body>
 </html>
