Fix script source path in login.html

--- a/public/login.html
+++ b/public/login.html
@@ -30,6 +30,6 @@
     <p id="msg" class="error"></p>
   </div>
 
-  <script src="\script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
