--- a/public/chat.html
+++ b/public/chat.html
@@ -95,7 +95,7 @@
   </main>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 
 </body>
 </html>
